--- a/src/app/components/smart/phone-number-form/phone-number-form.component.html
+++ b/src/app/components/smart/phone-number-form/phone-number-form.component.html
@@ -9,8 +9,10 @@
                 value="{{ contact.phone }}"
                 formControlName="numberPhone"
             />
-            <mat-icon *ngIf="!callStatus" (click)="toggleCall(contact)">call</mat-icon>
-            <mat-icon *ngIf="callStatus" (click)="toggleCall(contact)">phone_in_talk</mat-icon>
+            <button *ngIf="!callStatus" (click)="toggleCall(contact)">
+                <mat-icon>call</mat-icon>
+            </button>
+            <mat-icon *ngIf="callStatus">phone_in_talk</mat-icon>
         </div>
     </mat-form-field>
 </form>
