--- a/src/app/components/smart/call-widget/widget-component-status/widget-component-status.component.html
+++ b/src/app/components/smart/call-widget/widget-component-status/widget-component-status.component.html
@@ -1,3 +1,4 @@
-<p>
-  widget-component-status works!
-</p>
+<div *ngIf="!sourceTimer" class="container-wait-call">
+  <mat-spinner [diameter]="spinnerDiameter"></mat-spinner>
+  <span>Идет набор номера</span>
+</div>
