--- a/src/app/components/smart/call-widget/widget-component-actions/widget-component-actions.component.html
+++ b/src/app/components/smart/call-widget/widget-component-actions/widget-component-actions.component.html
@@ -1,3 +1,15 @@
-<p>
-  widget-component-actions works!
-</p>
+<div class="control-buttons">
+  <div [ngClass]="{ 'clock-timer-container-off': !sourceTimer }" class="clock-timer-container">
+    <div class="alarm-icon">
+      <mat-icon>alarm</mat-icon>
+    </div>
+    <div class="clock-timer">{{ sourceTimer | formatTime }}</div>
+  </div>
+  <div class="micro-container" (click)="toggleMicrophone()">
+    <mat-icon *ngIf="!microStatus">micro</mat-icon>
+    <mat-icon *ngIf="microStatus">mic_off</mat-icon>
+  </div>
+  <div class="call-btn" (click)="callToggle()">
+    <mat-icon>call</mat-icon>
+  </div>
+</div>
