--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -1,8 +1,3 @@
-<img mat-card-image src="../../../assets/img/desktop.jpg" alt="">
+<img mat-card-image src="../../../assets/img/desktop.jpg" alt="" />
 
-<button
-  mat-raised-button
-  color="primary"
-  class="button"
-  (click)="getTask()"
->Получить задание</button>
+<button mat-raised-button color="primary" class="button" (click)="getTask()">Получить задание</button>
