add Prettier rules

--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -1,11 +1,5 @@
 <mat-card-content>
-  <img mat-card-image src="../../../assets/img/desktop.jpg" alt="">
+    <img mat-card-image src="../../../assets/img/desktop.jpg" alt="" />
 
-  <button
-    mat-raised-button
-    color="primary"
-    class="button"
-    (click)="getTask()"
-  >Получить задание</button>
+    <button mat-raised-button color="primary" class="button" (click)="getTask()">Получить задание</button>
 </mat-card-content>
-
