added toolbar an route to main page

--- a/src/app/pages/start-page/start-page.component.scss
+++ b/src/app/pages/start-page/start-page.component.scss
@@ -1,6 +1,6 @@
 .button {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
@@ -9,4 +9,5 @@
 .mat-card-image {
     width: 100%;
     height: 80%;
+    margin: 0;
 }
