--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -1,5 +1,5 @@
+<app-toolbar></app-toolbar>
 <mat-card-content>
     <img mat-card-image src="../../../assets/img/desktop.jpg" alt="" />
-
-    <button mat-raised-button color="primary" class="button" (click)="getTask()">Получить задание</button>
+    <button (click)="getTask()" class="button" mat-raised-button color="primary">Получить задание</button>
 </mat-card-content>
