--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
 
+.left-list {
+    position: relative;
+    top: 0;
+    display: block;
+    float: left;
+    left: 0;
+    width: 300px;
+    height: 100%;
+}
