--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -3,3 +3,4 @@
 
     <button mat-raised-button color="primary" class="button" (click)="getTask()">Получить задание</button>
 </mat-card-content>
+<app-client-detail></app-client-detail>
