[55] Реализовать добавление компонента комментария

--- a/src/app/pages/main-page/main-layout/main-layout.component.html
+++ b/src/app/pages/main-page/main-layout/main-layout.component.html
@@ -1,3 +1,4 @@
 <app-toolbar></app-toolbar>
 <app-client-detail></app-client-detail>
 <app-side-bar class="left-list"></app-side-bar>
+<app-comment class="right-list"></app-comment>
