--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -18,9 +18,9 @@ mat-sidenav-container {
 }
 
 mat-sidenav {
-    height: 100%;
+    flex: 1;
     width: 300px;
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 10px 10px 5px 0 rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 10px 10px 5px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 10px 5px 0 rgba(0, 0, 0, 0.2);
 }
