[55] fix some problem

--- a/src/app/components/client/client-detail.component.scss
+++ b/src/app/components/client/client-detail.component.scss
@@ -3,6 +3,8 @@
     background-color: rgb(63, 61, 61);
     font-family: sans-serif;
     color: rgb(160, 160, 138);
+    margin-left: 200px;
+    padding-left: 100px;
 }
 
 .session-data {
