[55] fix some problem

--- a/src/app/components/comment/comment.component.scss
+++ b/src/app/components/comment/comment.component.scss
@@ -10,6 +10,12 @@
     display: block;
 }
 
+.comment-data {
+    text-align: right;
+    font-family: monospace;
+    font-size: 14px;
+}
+
 .input-icon {
     width: 24px;
     height: 24px;
