--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -1,27 +1,59 @@
-.user-image {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #f5f5f5;
-}
-
 .user-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
     align-self: flex-end;
     flex-wrap: wrap;
-    width: 160px;
+    width: 200px;
+    height: 55px;
     font-size: 15px;
+}
+
+.user-image {
+    width: 40px;
+    height: 40px;
+    margin-top: 5px;
+    border-radius: 50%;
+    background-color: #f5f5f5;
+}
+
+.user-data {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  height: 45px;
+  width: 150px;
+
+}
+
+.user-name {
+    display: flex;
+    align-items: flex-end;
+    font-style: 15px;
+    line-height: 25px;
 }
 
 .user-status { 
     width: 150px;
-    text-align: center;
-    font-size: 12px;
-    color: #f5f5f5;
+    padding-left: 10px;
+    font-size: 10px;
+    line-height: 12px;
+    color: #c7c3c3;
 }
 
 .mat-menu-item {
     padding: 0 30px;
+}
+
+.mat-card-image {
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin: 0 auto;
+    padding-top: 4px;
+}
+
+.mat-icon-button {
+    width: 30px;
+    height: 30px;
 }
