--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav opened mode="side">
+<mat-drawer opened mode="side">
     <mat-form-field class="comment-input-box" appearance="outline" color="warn">
         <img matSuffix class="input-icon" src="../../../assets/icon/message.svg" alt="" />
         <label>
@@ -18,4 +18,4 @@
             </mat-card-content>
         </mat-card>
     </div>
-</mat-sidenav>
+</mat-drawer>
