--- a/src/app/components/comment/comment.component.scss
+++ b/src/app/components/comment/comment.component.scss
@@ -28,19 +28,20 @@
     opacity: 0.8;
 }
 
-mat-card-content {
-    word-break: break-all;
-    font-style: italic;
+.mat-drawer-side {
+  border-left: solid 1px rgba(0,0,0,.50);
 }
 
 .mat-card-title {
     font-size: 14px;
 }
 
+mat-card-content {
+  word-break: break-all;
+  font-style: italic;
+}
+
 mat-sidenav {
     flex: 1;
     width: 350px;
-    -webkit-box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.2);
 }
