--- a/src/app/components/client/client.component.html
+++ b/src/app/components/client/client.component.html
@@ -1,21 +1,21 @@
 <div class="wrapper">
-    <div class="client-data">
+    <div *ngIf="client$ | async as client" class="client-data">
         <div class="session-data">
             <span class="time-data">{{ time | date: 'hh:mm a' }}</span>
-            <span class="session-id">{{ user.customerId }}</span>
-            <span class="date-data">{{ user.createdAt | date: 'dd.MM.yy'}}</span>
+            <span class="session-id">{{ client.customerId }}</span>
+            <span class="date-data">{{ client.createdAt | date: 'dd.MM.yy' }}</span>
         </div>
         <div class="client-detail">
-            <div class="client-name"> 
-                <span>{{ user.firstName }}</span>
-                <span>{{ user.lastName}}</span>
+            <div class="client-name">
+                <span>{{ client.firstName }}</span>
+                <span>{{ client.lastName }}</span>
             </div>
-            <span class="client-age">{{ user.age | ageData }}</span>
-            <div class="client-adress">{{ user.address }}</div>
-            <div class="client-status">{{ user.city }}</div>
+            <span class="client-age">{{ client.age | ageData }}</span>
+            <div class="client-adress">{{ client.address }}</div>
+            <div class="client-status">{{ client.city }}</div>
         </div>
-        <div >
-            <img src="{{user.avatar}}" class="client-image">
+        <div>
+            <img src="{{ client.avatar }}" class="client-image" />
         </div>
     </div>
 </div>
