--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -1,5 +1,5 @@
 .example-container {
-    height: 100%;
+    height: 100vh;
 }
 
 .side-button {
@@ -8,11 +8,11 @@
     text-align: center;
 }
 
-mat-sidenav-container {
-    background-color: white;
-}
-
 mat-sidenav {
     flex: 1;
     width: 250px;
+}
+
+mat-sidenav-container {
+    background-color: white;
 }
