add ngRx in project

--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,3 +1,5 @@
 <div class="logo">
-    <span class="logo-title">CommercBank</span>
+    <nav class="cl-effect">
+        <a data-hover="CommercBank" (click)="refresh()"><span class="logo-title">CommercBank</span></a>
+    </nav>
 </div>
