add ngRx in project and add abstract class onceRunOrCatch.

--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,5 +1,5 @@
 <div class="logo">
     <nav class="cl-effect">
-        <a data-hover="CommercBank" (click)="refresh()"><span class="logo-title">CommercBank</span></a>
+        <a data-hover="CommercBank" (click)="navigateToStartPage()"><span class="logo-title">CommercBank</span></a>
     </nav>
 </div>
