--- a/src/app/components/comment/comment.component.scss
+++ b/src/app/components/comment/comment.component.scss
@@ -13,7 +13,7 @@
 .comment-data {
     text-align: right;
     font-family: monospace;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .input-icon {
@@ -29,16 +29,17 @@
 }
 
 .mat-drawer-side {
-  border-left: solid 1px rgba(0,0,0,.50);
+    border-left: solid 1px rgba(0, 0, 0, 0.5);
 }
 
 .mat-card-title {
+    width: 150px;
     font-size: 14px;
 }
 
 mat-card-content {
-  word-break: break-all;
-  font-style: italic;
+    word-break: break-all;
+    font-style: italic;
 }
 
 mat-sidenav {
