--- a/src/app/components/contacts/contact.component.html
+++ b/src/app/components/contacts/contact.component.html
@@ -1,38 +1,28 @@
 <form [formGroup]="clientContactsForm" class="contacts-form">
-    <mat-form-field class="input-full-width">
+    <mat-form-field class="input-full-width input ">
         <mat-label>Номер телефона</mat-label>
-        <input [formControlName]="contactsFormControlEnum.PHONE" value="{{ contact.phone }}" matInput />
+        <input [formControlName]="contactsFormControlEnum.PHONE" matInput />
     </mat-form-field>
-    <mat-form-field class="input-full-width">
+    <mat-form-field class="input-full-width input ">
         <mat-label>ФИО Контакта</mat-label>
-        <input
-            [formControlName]="contactsFormControlEnum.CLIENT_NAME"
-            value="{{ contact.firstName }} {{ contact.firstName }}"
-            matInput
-        />
+        <input [formControlName]="contactsFormControlEnum.CLIENT_NAME" matInput />
     </mat-form-field>
 
-    <mat-form-field class="input-full-width">
+    <mat-form-field class="input-full-width input ">
         <mat-label>Тип телефона</mat-label>
         <select [formControlName]="contactsFormControlEnum.PHONE_TYPE" placeholder="Тип телефона" matNativeControl>
-            <option [selected]="contact.phoneType" value="contact.phoneType"> {{ contact.phoneType }} </option>
             <option *ngFor="let phoneType of phoneTypes" [value]="phoneType">
                 {{ phoneType }}
             </option>
         </select>
     </mat-form-field>
 
-    <mat-form-field class="input-full-width">
+    <mat-form-field class="input-full-width input ">
         <mat-label>Тип Связи</mat-label>
-        <input [formControlName]="contactsFormControlEnum.CONTACTS_TYPE" value="{{ contact.departament }}" matInput />
+        <input [formControlName]="contactsFormControlEnum.CONTACTS_TYPE" matInput />
     </mat-form-field>
 
-    <mat-form-field class="input-full-width comment" floatLabel="never">
-        <input
-            [formControlName]="contactsFormControlEnum.COMMENT"
-            value="{{ contact.description }}"
-            placeholder="Комментарий"
-            matInput
-        />
+    <mat-form-field class="input-full-width input comment" floatLabel="never">
+        <input [formControlName]="contactsFormControlEnum.COMMENT" placeholder="Комментарий" matInput />
     </mat-form-field>
 </form>
