--- a/src/app/pages/main-page/main-layout/main-layout.component.html
+++ b/src/app/pages/main-page/main-layout/main-layout.component.html
@@ -2,4 +2,4 @@
 <app-side-bar class="left-list"></app-side-bar>
 <app-client></app-client>
 <app-client-detail></app-client-detail>
-<app-comment class="right-list"></app-comment>
+<app-comment></app-comment>
