--- a/src/app/components/comment/comment.component.scss
+++ b/src/app/components/comment/comment.component.scss
@@ -37,12 +37,22 @@
     font-size: 14px;
 }
 
+.mat-card {
+    box-shadow: 0 0 0 0;
+}
+
 mat-card-content {
     word-break: break-all;
     font-style: italic;
 }
 
 mat-sidenav {
+    position: relative;
+    top: 0;
+    display: flex;
+    flex-direction: column;
     flex: 1;
+    float: right;
+    right: 0;
     width: 350px;
 }
