--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -11,6 +11,8 @@
 mat-sidenav {
     flex: 1;
     width: 250px;
+    border-right: solid 1px rgba(0, 0, 0, 0.5);
+    border-bottom: solid 1px rgba(0, 0, 0, 0.5);
 }
 
 mat-sidenav-container {
