--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -1,16 +1,29 @@
 .example-container {
-    height: 100%;
+    position: relative;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    float: left;
+    left: 0;
+    height: 90%;
+    width: 250px;
 }
 
 .side-button {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    text-align: center;
+    bottom: 0;
+    padding: 30px;
+    position: absolute;
+    z-index: 999;
+}
+
+.list-item {
+    padding-bottom: 80px;
 }
 
 mat-sidenav {
-    flex: 1;
-    width: 250px;
+    border-right: solid 1px rgba(0, 0, 0, 0.5);
+    border-bottom: solid 1px rgba(0, 0, 0, 0.5);
 }
 
 mat-sidenav-container {
