added activity service and component

--- a/src/app/components/client-detail/client-detail.component.html
+++ b/src/app/components/client-detail/client-detail.component.html
@@ -1,4 +1,4 @@
 <div class="wrapper">
-    <app-client-personal-detail></app-client-personal-detail>
+    <app-client-detail-list></app-client-detail-list>
     <router-outlet></router-outlet>
 </div>
