--- a/src/app/components/client/client.component.scss
+++ b/src/app/components/client/client.component.scss
@@ -1,12 +1,3 @@
-.wrapper {
-    margin-left: 200px;
-    padding-left: 100px;
-    height: 170px;
-    background-color: rgb(63, 61, 61);
-    font-family: sans-serif;
-    color: rgb(228, 221, 208);
-}
-
 .session-data {
     display: flex;
     justify-content: space-between;
@@ -37,10 +28,10 @@
     margin-bottom: 10px;
     font-size: 20px;
     text-transform: uppercase;
-}
 
-.client-name span:last-child {
-    padding-left: 10px;
+    span:last-child {
+        padding-left: 10px;
+    }
 }
 
 .client-status {
@@ -58,4 +49,8 @@
     position: absolute;
     right: 10px;
     top: 40%;
+}
+
+.grey {
+    color: rgb(168, 168, 167);
 }
