--- a/src/app/pages/main-page/main-layout/main-layout.component.html
+++ b/src/app/pages/main-page/main-layout/main-layout.component.html
@@ -1,5 +1,5 @@
 <app-toolbar></app-toolbar>
 <app-side-bar class="left-list"></app-side-bar>
-<app-client></app-client>
+<app-client-data></app-client-data>
 <app-client-detail></app-client-detail>
 <app-comment class="right-list"></app-comment>
