--- a/src/app/components/contacts/contact.component.html
+++ b/src/app/components/contacts/contact.component.html
@@ -1,8 +1,12 @@
 <form [formGroup]="clientContactsForm" class="contacts-form">
-    <mat-form-field class="input-full-width input ">
-        <mat-label>Номер телефона</mat-label>
-        <input [formControlName]="contactsFormControlEnum.PHONE" matInput />
-    </mat-form-field>
+    <div class="phone-field">
+        <mat-form-field class="input-full-width input phone">
+            <mat-label>Номер телефона</mat-label>
+            <input [formControlName]="contactsFormControlEnum.PHONE" matInput />
+        </mat-form-field>
+        <app-button-call></app-button-call>
+    </div>
+
     <mat-form-field class="input-full-width input ">
         <mat-label>ФИО Контакта</mat-label>
         <input [formControlName]="contactsFormControlEnum.CLIENT_NAME" matInput />
