--- a/src/app/pages/main-page/main-layout/main-layout.component.html
+++ b/src/app/pages/main-page/main-layout/main-layout.component.html
@@ -2,4 +2,5 @@
 <app-side-bar class="left-list"></app-side-bar>
 <app-client></app-client>
 <app-client-detail></app-client-detail>
+<app-widget-call></app-widget-call>
 <app-comment></app-comment>
