--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="user-info">
     <div class="user-image">
-        <img mat-card-image src="../../../assets/img/woman (1).png" alt="" />
+        <mat-icon aria-hidden="false" aria-label="User">person</mat-icon>
     </div>
     <div class="user-data">
         <div class="user-name">
@@ -17,5 +17,5 @@
         <div class="user-status">
             <span>В сети</span>
         </div>
-    </div> 
+    </div>
 </div>
