--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -1,31 +1,25 @@
-.example-container {
-    position: relative;
+.side-button {
+    position: fixed;
+    bottom: 50px;
+    left: 40px;
+}
+
+mat-sidenav-content {
+    display: flex;
+    flex-direction: column;
+}
+
+mat-sidenav-container {
+    margin-top: 60px;
+    position: fixed;
     top: 0;
     display: flex;
     flex-direction: column;
     flex: 1;
     float: left;
     left: 0;
-    height: 90%;
+    height: 75%;
     width: 250px;
-}
-
-.side-button {
-    bottom: 0;
-    padding: 30px;
-    position: absolute;
-    z-index: 999;
-}
-
-.list-item {
-    padding-bottom: 80px;
-}
-
-mat-sidenav {
-    border-right: solid 1px rgba(0, 0, 0, 0.5);
-    border-bottom: solid 1px rgba(0, 0, 0, 0.5);
-}
-
-mat-sidenav-container {
     background-color: white;
+    box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 0.3);
 }
