--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -15,6 +15,13 @@
     margin-top: 5px;
     border-radius: 50%;
     background-color: #f5f5f5;
+
+    .mat-icon {
+        color: black;
+        margin-left: 2px;
+        margin-top: 1.5px;
+        font-size: 36px;
+    }
 }
 
 .user-data {
@@ -66,5 +73,5 @@
 }
 
 .mat-card-image:first-child {
-  margin-top: 0;
+    margin-top: 0;
 }
