some fix css on side-bar

--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -5,6 +5,9 @@
                 <mat-expansion-panel-header>
                     <mat-panel-title> {{ idx + 1 }}. {{ step.name }} </mat-panel-title>
                 </mat-expansion-panel-header>
+                <mat-panel-description>
+                    {{ step.phone }}
+                </mat-panel-description>
             </mat-expansion-panel>
         </mat-accordion>
     </mat-sidenav>
