--- a/src/app/components/contacts/contact.component.html
+++ b/src/app/components/contacts/contact.component.html
@@ -1,28 +1,39 @@
 <form [formGroup]="clientContactsForm" class="contacts-form">
     <mat-form-field class="input-full-width input ">
         <mat-label>Номер телефона</mat-label>
-        <input [formControlName]="contactsFormControlEnum.PHONE" matInput />
+        <label>
+            <input [formControlName]="contactsFormControlEnum.PHONE" matInput />
+        </label>
+        <app-phone-number [data]="contact.phone"></app-phone-number>
     </mat-form-field>
     <mat-form-field class="input-full-width input ">
         <mat-label>ФИО Контакта</mat-label>
-        <input [formControlName]="contactsFormControlEnum.CLIENT_NAME" matInput />
+        <label>
+            <input [formControlName]="contactsFormControlEnum.CLIENT_NAME" matInput />
+        </label>
     </mat-form-field>
 
     <mat-form-field class="input-full-width input ">
         <mat-label>Тип телефона</mat-label>
-        <select [formControlName]="contactsFormControlEnum.PHONE_TYPE" placeholder="Тип телефона" matNativeControl>
-            <option *ngFor="let phoneType of phoneTypes" [value]="phoneType">
-                {{ phoneType }}
-            </option>
-        </select>
+        <label>
+            <select [formControlName]="contactsFormControlEnum.PHONE_TYPE" placeholder="Тип телефона" matNativeControl>
+                <option *ngFor="let phoneType of phoneTypes" [value]="phoneType">
+                    {{ phoneType }}
+                </option>
+            </select>
+        </label>
     </mat-form-field>
 
     <mat-form-field class="input-full-width input ">
         <mat-label>Тип Связи</mat-label>
-        <input [formControlName]="contactsFormControlEnum.CONTACTS_TYPE" matInput />
+        <label>
+            <input [formControlName]="contactsFormControlEnum.CONTACTS_TYPE" matInput />
+        </label>
     </mat-form-field>
 
     <mat-form-field class="input-full-width input comment" floatLabel="never">
-        <input [formControlName]="contactsFormControlEnum.COMMENT" placeholder="Комментарий" matInput />
+        <label>
+            <input [formControlName]="contactsFormControlEnum.COMMENT" placeholder="Комментарий" matInput />
+        </label>
     </mat-form-field>
 </form>
