--- a/src/app/components/contacts/contact.component.scss
+++ b/src/app/components/contacts/contact.component.scss
@@ -26,4 +26,8 @@
     ::ng-deep .mat-form-field-underline {
         display: none;
     }
+
+    ::ng-deep .mat-form-field-infix {
+        display: flex;
+    }
 }
